# ArcheAge_Pak

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: filetime.rs  lib.rs  main.rs
src/cli/: add_args.rs  app.rs  apply_patch_args.rs  command.rs  create_args.rs  extract_all_args.rs  extract_file_args.rs  format_args.rs  list_args.rs  mod.rs  replace_args.rs
src/commands/: add.rs  apply_patch.rs  create.rs  extract_all.rs  extract_file.rs  list.rs  mod.rs  replace.rs  runner.rs
src/io/: directory_source.rs  mod.rs  stream_copier.rs
src/pak/: archive.rs  archive_entry.rs  archive_entry_payload.rs  archive_file_metadata.rs  archive_mutator.rs  archive_path_index.rs  archive_payload_source.rs  archive_writer.rs  block_alignment.rs  constants.rs  crypto.rs  deleted_manifest.rs  header.rs  mod.rs  pak_format.rs  pak_key.rs  pak_path.rs  record_codec.rs
tests/: apply_patch.rs  roundtrip.rs
tests/common/: mod.rs
