[package]
name = "archeage-pak"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[dependencies]
aes = "0.8"
anyhow = "1.0"
cbc = "0.1"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
md-5 = "0.10"
num_cpus = "1.16"
rayon = "1.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
